@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-23T16:11:59Z",
-  "count_outdated" : 434,
-  "uniques_outdated" : 33,
+  "timestamp" : "2022-07-27T00:55:58Z",
+  "count_outdated" : 435,
+  "uniques_outdated" : 34,
   "count" : 449,
   "uniques" : 40,
   "views" : [
-    {
-      "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 3,
